# picv

./: .gitignore  CMakeLists.txt  README.md  implementation_plan.md  main.cpp  test_exif.cpp
scratch/: find_butterfly.py  generate_icon.py
